--- a/Banda/pom.xml
+++ b/Banda/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.salesianostriana.dam</groupId>
-	<artifactId>03ethfragmentos</artifactId>
+	<artifactId>Banda</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>03EThFragmentos</name>
+	<name>Banda</name>
 		<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
