--- a/Banda/src/main/resources/application.properties
+++ b/Banda/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.port=9000
-# URL jdbc de conexion a la base de datos
-# spring.datasource.url=jdbc:h2:mem:db
+
 spring.datasource.url=jdbc:h2:./db/basededatos
 
-# Usuario y contrasena de la base de datos
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -15,7 +13,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # En nuestro caso http://localhost:8080/h2-console
 spring.h2.console.enabled=true
 
-# Habilitamos los mensajes sql en el log
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.thymeleaf.cache=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
