--- a/Banda/src/main/resources/application.properties
+++ b/Banda/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
